# TDD_Practice

./: .gitignore  .gitmodules  QtUnitTesting.pro  Retweet.pro  Retweet.sln  TDD_Practice.sln
BenchmarkUTest/: BenchmarkUTest.pro  tst_benchmarkutest.cpp
ContactApp/: ContactApp.pro  PanelContact.cpp  PanelContact.hpp  PanelContact.ui  UI_PanelContact.cpp  UI_PanelContact.hpp  main.cpp
FirstQtUnitTest/: FirstQtUnitTest.pro  Makefile  tst_testqstring.cpp
FirstTDDExample/: Main.cpp  Makefile  Soundex.hpp  SoundexTest.cpp
GMockTest/: GMockTest.pro  GMockTest.vcxproj  Main.cpp  Makefile  Soundex.h  SoundexTest.cpp  gtest_dependency.pri  main.cpp  tst_gmocktestcase.h
GTest4Retweet/: GTest4Retweet.pro  GTest4Retweet.vcxproj  RetweetCollectionTest.cpp  Test4RetweetCollection.cpp  main.cpp  tst_retweettestcase.h
RetweetApp/: RetweetApp.pro  RetweetApp.vcxproj  RetweetCollection.cpp  RetweetCollection.hpp  Tweet.cpp  Tweet.h  main.cpp
TestPanelContact/: Makefile  TestPanelContact.pro  main.cpp  tst_testpanelcontact.cpp  tst_testpanelcontact.hpp
UTest4GUI/: CMakeLists.txt  UTest4GUI.pro  tst_testgui.cpp
testy/: CMakeLists.txt  CMakeLists.txt.in  CMakeSettings.json
testy/include/testy/: customer.h  widget.h
testy/src/: customer.c  main.c  widget.c
testy/test/: CMakeLists.txt  customer.cpp  widget.cpp
